# fride-tracker

./: README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx  index.css  theme.js
client/src/components/common/: recipeCard.jsx  recipeGrid.jsx  refreshButton.jsx  scanbox.jsx  statusChip.jsx  userLikes.jsx
client/src/components/data-display/: activeList.jsx  itemActivities.jsx
client/src/components/layout/: -
client/src/components/modals/: qrcodemodal.jsx
client/src/context/: SnackBarContext.js
client/src/hooks/: useNetwork.js
client/src/scenes/dashboard/: dashboard.jsx
client/src/scenes/global/: sidebar.jsx  topbar.jsx
client/src/scenes/item/: assign.jsx  item.jsx
client/src/utils/: timeFunc.js
server/: main.py  pyproject.toml  test.db
server/api/v1/items/: adapter.py
server/api/v1/items/request/: item.py
server/api/v1/items/response/: item.py
server/api/v1/recipes/: adapter.py  like_adapter.py
server/api/v1/recipes/request/: recipe.py
server/api/v1/recipes/response/: recipe.py
server/api/v1/recipes/services/: recipe_like_service.py  recipe_service.py
server/api/v1/records/: adapter.py
server/api/v1/records/request/: record.py
server/api/v1/records/response/: record.py
server/api/v1/users/: adapter.py  like_adapter.py
server/api/v1/users/request/: user.py
server/api/v1/users/response/: user.py
server/core/db/: session.py
server/core/db/models/: __init__.py  item.py  recipe.py  recipeLike.py  record.py  user.py
server/core/dependencies/get_db/: __init__.py  get_db.py
(+9 files in other folders)
